# controllers/epilog-laser.js
@@ -185,6 +185,7 @@ module.exports.upload = function (req, res) {
           } else {
             dashboardPage.errors = null;
             fifoData.userId = req.user._id;
+            fifoData.username = req.user.username;
             fifoData.jobId = uuid();
             fifoData.status = 'pending'; //status: pending, approved, rejected
             fifo.push(fifoData, "local", function(err, job){
