# controllers/roland-milling.js
@@ -208,6 +208,7 @@ module.exports.upload = function (req, res) {
           } else {
             dashboardPage.errors = null;
             fifoData.userId = req.user._id;
+            fifoData.username = req.user.username;
             fifoData.status = 'pending'; //status: pending, approved, rejected
             fifo.push(fifoData, "local", function(err, job){
                             if (err){
